Fix horizontal scrollbar in width=full issue introduced in Chromium 129.

--- a/src/ilw-call-to-action.styles.css
+++ b/src/ilw-call-to-action.styles.css
@@ -77,6 +77,7 @@
     display: block;
 
     container-type: inline-size;
+    contain:layout;
     color: var(--ilw-call-to-action--text-color);
     font-family: var(--ilw-call-to-action--font);
 }
